# ocaml-wort

./: README.md  dune-project  makefile
examples/: call.wort  drop.wort  fact.wort  fact2.wort  fail.wort  fix.wort  higher-order.wort  linrec.wort  prog.wort  scope.wort  shuffles.wort  simple.wort  simple2.wort  simple3.wort  simple4.wort  simple5.wort  sum.wort  threadit.wort
lib/: dune  eval.ml  infer.ml  lexer.mll  parser.mly  wort.ml  wort_repl.ml
